# Lidar-based-SLAM-and-Autonomous-Navigation-with-ROS

src/: CMakeLists.txt
src/nav_pkg/: CMakeLists.txt  README.en.md  README.md  package.xml
src/nav_pkg/config/: base_global_planner_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/nav_pkg/launch/: nav.launch
src/nav_pkg/map/: test.pgm
src/wzm0227/src/DZY2023010601_car/: CMakeLists.txt  package.xml
src/wzm0227/src/DZY2023010601_car/include/: xju_bridge.h
src/wzm0227/src/DZY2023010601_car/launch/: bigscene.launch  simple_world.launch
src/wzm0227/src/DZY2023010601_car/src/: a.cpp  b.cpp
src/wzm0227/src/DZY2023010601_car/urdf/: xju_model.gazebo.xacro  xju_model.urdf.xacro
src/wzm0227/src/DZY2023010601_move/: CMakeLists.txt  package.xml
src/wzm0227/src/DZY2023010601_move/launch/: move_base.launch
src/wzm0227/src/DZY2023010601_move/param/: costmap_params.yaml
src/wzm0227/src/DZY2023010601_slam/: CMakeLists.txt  package.xml
src/wzm0227/src/DZY2023010601_slam/launch/: localization.launch  mapping.launch
